--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,14 +2,23 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: cimg/node:14.10.1 # the primary container, where your job's commands are run
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+      - image: 'circleci/node12'
+        environnement:
+          DATABASE_URL: postgres://psqluer:psqlpassword@localhost:5432/psdb
+          JWT_SECRET: some string yo want
+          API_PORT: 3000
+          API_HOST: localhost
+          API_PROTOCOL: http
+      - image: 'circle1/postgres:9.6.2-alpine'
+        environnement:
+          POSTGRES_USER: psqluer
+          POSTGRES_PASSWORD: psqlpassword
+          POSTGRES_DB: psdb
     steps:
-      - checkout # check out the code in the project directory
+      - checkout
       - restore_cache:
           key: yarn-packages-{{ checksum "yarn.lock" }}
+      - run: yarn test:e2e
       - run: yarn global add node-gyp && yarn install
       - run: yarn lint
       - run: yarn format:check
