--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,16 +1,17 @@
 version: 2.1
 jobs:
+  build:
     database1:
       docker:
         - image: 'circleci/node:12'
-          environnement:
+          environment:
             DATABASE_URL: postgres://psqluer:psqlpassword@localhost:5432/psdb
             JWT_SECRET: some string yo want
             API_PORT: 3000
             API_HOST: localhost
             API_PROTOCOL: http
         - image: 'circle1/postgres:9.6.2-alpine'
-          environnement:
+          environment:
             POSTGRES_USER: psqluer
             POSTGRES_PASSWORD: psqlpassword
             POSTGRES_DB: psdb
