--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,13 +22,13 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: yarn-packages-{{ checksum "yarn.lock" }}
+          key: yarn-v1-packages-{{ checksum "yarn.lock" }}
       - run: yarn global add node-gyp && yarn install
       - run: yarn lint
       - run: yarn format:check
       - run: yarn test:ci
       - run: yarn test:e2e
       - save_cache:
-          key: yarn-packages-{{ checksum "yarn.lcok" }}
+          key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ./node_modules
