--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
           API_PORT: 3000
           API_HOST: localhost
           API_PROTOCOL: http
-      - image: 'circleci/postgres'
+      - image: 'circleci/postgres:9.6.2-alpine'
         environment:
           POSTGRES_USER: psqluer
           POSTGRES_PASSWORD: psqlpassword
