--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       - image: 'circleci/node:12'
         environment:
-          DATABASE_URL: 'postgres://psqluer:psqlpassword@localhost:5432/psdb'
+          DATABASE_URL: postgres://psqluer:psqlpassword@localhost:5432/psdb
           JWT_SECRET: some string yo want
           API_PORT: 3000
           API_HOST: localhost
